# VeryAgentCore

./: .gitignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.zh-CN.md  CHANGELOG.md  Cargo.toml  clippy.toml  justfile
crates/aionui-assistant/: Cargo.toml
crates/aionui-assistant/src/: builtin.rs  lib.rs  routes.rs  service.rs
crates/aionui-runtime/: Cargo.toml  build.rs  build_support.rs
crates/aionui-runtime/src/: cache.rs  extract.rs  lib.rs  managed_resources.rs  resolver.rs  shell_env.rs  spawn.rs
crates/aionui-runtime/tests/: npm_exec_integration.rs
crates/aionui-shell/: Cargo.toml
crates/aionui-shell/src/: error.rs  lib.rs  routes.rs  shell.rs  state.rs
crates/aionui-shell/tests/: shell_integration.rs
crates/aionui-system/: Cargo.toml
crates/aionui-system/src/: lib.rs  provider_migration.rs  routes.rs
crates/aionui-system/tests/: model_fetch_routes.rs
crates/veryagent-app/: Cargo.toml
crates/veryagent-app/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  process_report.rs  services.rs
crates/veryagent-app/tests/: acp_e2e.rs  agent_integration_e2e.rs  assistants_e2e.rs  auth_e2e.rs  auxiliary_e2e.rs  channel_e2e.rs  conversation_e2e.rs  cron_e2e.rs  custom_agent_e2e.rs  extension_e2e.rs  file_e2e.rs  health.rs  local_mode.rs  mcp_e2e.rs  message_e2e.rs  office_e2e.rs  remote_agent_e2e.rs  shell_e2e.rs  skills_builtin_e2e.rs  startup_smoke.rs  stt_stream_e2e.rs  system_settings_e2e.rs  system_version_e2e.rs  team_e2e.rs  team_phase1_smoke.rs  websocket_e2e.rs  work_dir_e2e.rs
crates/veryagent-assistant/: Cargo.toml
crates/veryagent-assistant/src/: agent_catalog.rs  builtin.rs  error.rs  routes.rs  service.rs
crates/veryagent-channel/: Cargo.toml
crates/veryagent-channel/src/: action.rs  channel_settings.rs  error.rs  lib.rs  manager.rs  message_service.rs  orchestrator.rs  pairing.rs  routes.rs  session.rs  stream_relay.rs
crates/veryagent-channel/tests/: dingtalk_integration.rs  formatter_test.rs  lark_integration.rs  manager_integration.rs  message_service_integration.rs  orchestrator_test.rs  pairing_integration.rs  session_action_integration.rs  stream_relay_test.rs  telegram_integration.rs  weixin_integration.rs
crates/veryagent-conversation/: Cargo.toml
crates/veryagent-conversation/src/: acp_error_recovery.rs  agent_health_policy.rs  convert.rs  error.rs  message_cursor.rs  message_persistence.rs  routes.rs  routes_aux.rs  runtime_completion.rs  runtime_state.rs  service.rs  service_ops.rs  service_test.rs  session_context.rs  skill_resolver.rs  skill_snapshot.rs  startup_recovery.rs  state.rs  stream_persistence.rs  stream_relay.rs  task_options.rs  turn_continuation_policy.rs  turn_orchestrator.rs  turn_recovery_policy.rs
crates/veryagent-conversation/tests/: acp_tool_call_persistence.rs  conversation_crud.rs  conversation_extended.rs  response_middleware_integration.rs  stream_relay_tips.rs  stream_relay_tool_call.rs
crates/veryagent-cron/: Cargo.toml
crates/veryagent-cron/src/: artifacts.rs  error.rs  events.rs  executor.rs  prompt.rs  routes.rs  scheduler.rs  service.rs  skill_suggest.rs  state.rs  types.rs
crates/veryagent-cron/tests/: prompt_test.rs  service_integration.rs  skill_file_test.rs
crates/veryagent-extension/: Cargo.toml
crates/veryagent-extension/src/: classifier.rs  constants.rs  dependency.rs  error.rs  external_paths.rs  hub_routes.rs  lifecycle.rs  loader.rs  manifest.rs  registry.rs  routes.rs  skill_routes.rs  skill_service.rs  state.rs  types.rs  types_tests.rs
crates/veryagent-extension/tests/: assistant_dispatch_test.rs  contribution_resolution_test.rs  cron_skill_resolve_test.rs  dependency_management_test.rs  extension_loading_test.rs  hub_test.rs  lifecycle_hooks_test.rs  manifest_validation_test.rs  permission_system_test.rs  registry_test.rs  skill_integration_test.rs  skill_service_materialize.rs  startup_materialize.rs  state_persistence_test.rs  template_resolution_test.rs
crates/veryagent-mcp/: Cargo.toml
crates/veryagent-mcp/src/: adapter.rs  error.rs  lib.rs  oauth_service.rs  routes.rs  service.rs  session_injection.rs  sync_service.rs  types.rs
crates/veryagent-mcp/tests/: adapter_integration.rs  connection_test_integration.rs  connection_test_path_resolution_integration.rs  file_adapter_integration.rs  oauth_integration.rs  service_integration.rs  session_injection_integration.rs  sync_integration.rs  types_integration.rs
crates/veryagent-realtime/: Cargo.toml
crates/veryagent-realtime/src/: broadcaster.rs  handler.rs  lib.rs  manager.rs  types.rs
crates/veryagent-realtime/tests/: broadcast_integration.rs  handler_integration.rs  manager_integration.rs
crates/veryagent-shell/: Cargo.toml
crates/veryagent-shell/examples/: stt_stream_smoke.rs
crates/veryagent-shell/src/: opener.rs  routes.rs  shell.rs  state.rs  stt.rs  stt_deepgram.rs  stt_openai.rs  stt_stream.rs  stt_stream_deepgram.rs  stt_stream_openai.rs  stt_stream_provider.rs  stt_stream_tls.rs
crates/veryagent-shell/tests/: shell_integration.rs  stt_integration.rs  stt_stream_deepgram_integration.rs  stt_stream_openai_integration.rs
crates/veryagent-system/: Cargo.toml
crates/veryagent-system/src/: client_pref.rs  error.rs  lib.rs  protocol.rs  provider.rs  routes.rs  runtime_prepare.rs  settings.rs  sysinfo.rs  version.rs
crates/veryagent-system/tests/: connection_test_integration.rs  model_fetch_routes.rs  protocol_detection_routes.rs  provider_routes.rs  settings_routes.rs  system_info_routes.rs
crates/veryagent-team/: Cargo.toml
crates/veryagent-team/docs/: frontend-guide.md  internals.md  mcp.md  team-prompts.md
crates/veryagent-team/src/: capability.rs  crash_detection.rs  error.rs  event_loop.rs  events.rs  lib.rs  mailbox.rs  message_projection.rs  ports.rs  provisioning.rs  routes.rs  service.rs  session.rs  slot_wake_gate.rs  task_board.rs  team_run.rs  test_utils.rs  types.rs  workspace.rs
crates/veryagent-team/tests/: e2e_smoke.rs  e2e_team_flow.rs  mailbox_integration.rs  mcp_server_integration.rs  prompts_events_integration.rs  scheduler_integration.rs  (+2 more)
(+606 files in other folders)
