[package]
name = "aionui-assistant"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aionui-common = { workspace = true }
aionui-api-types = { workspace = true }
aionui-db = { workspace = true }
aionui-auth = { workspace = true }
aionui-extension = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
