[package]
name = "aionui-system"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-auth.workspace = true
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
aionui-runtime.workspace = true
axum.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
aws-config.workspace = true
aws-sdk-bedrock.workspace = true
semver.workspace = true
dirs.workspace = true

[dev-dependencies]
tower = { workspace = true }
http-body-util.workspace = true
reqwest.workspace = true
wiremock = "0.6"
