[package]
name = "veryagent-channel"
version.workspace = true
edition.workspace = true

[features]
default = []
telegram = ["dep:reqwest"]
lark = ["dep:reqwest", "dep:tokio-tungstenite", "dep:futures-util", "dep:prost", "dep:rustls", "dep:rustls-native-certs"]
dingtalk = ["dep:reqwest", "dep:tokio-tungstenite", "dep:futures-util", "dep:rustls", "dep:rustls-native-certs"]
weixin = ["dep:reqwest", "dep:futures-util", "dep:base64", "dep:uuid"]

[dependencies]
veryagent-common.workspace = true
veryagent-db.workspace = true
veryagent-api-types.workspace = true
veryagent-realtime.workspace = true
veryagent-conversation.workspace = true
veryagent-ai-agent.workspace = true
veryagent-extension.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
getrandom.workspace = true
dashmap.workspace = true
regex.workspace = true
reqwest = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
veryagent-ai-agent = { workspace = true, features = ["test-support"] }
