[package]
name = "veryagent-conversation"
version.workspace = true
edition.workspace = true

[dependencies]
veryagent-common.workspace = true
veryagent-db.workspace = true
veryagent-api-types.workspace = true
veryagent-realtime.workspace = true
veryagent-auth.workspace = true
veryagent-ai-agent.workspace = true
veryagent-extension.workspace = true
veryagent-mcp.workspace = true
veryagent-runtime.workspace = true
axum.workspace = true
base64.workspace = true
regex.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
veryagent-ai-agent = { workspace = true, features = ["test-support"] }
