[package]
name = "veryagent-cron"
version.workspace = true
edition.workspace = true

[dependencies]
veryagent-common.workspace = true
veryagent-db.workspace = true
veryagent-api-types.workspace = true
veryagent-realtime.workspace = true
veryagent-conversation.workspace = true
veryagent-ai-agent.workspace = true
veryagent-auth.workspace = true
veryagent-system.workspace = true
axum.workspace = true
cron.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
veryagent-ai-agent = { workspace = true, features = ["test-support"] }
