[package]
name = "veryagent-realtime"
version.workspace = true
edition.workspace = true

[dependencies]
veryagent-api-types.workspace = true
axum.workspace = true
tokio.workspace = true
dashmap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
