[package]
name = "veryagent-team"
version.workspace = true
edition.workspace = true

[dependencies]
veryagent-common.workspace = true
veryagent-db.workspace = true
veryagent-api-types.workspace = true
veryagent-realtime.workspace = true
veryagent-ai-agent.workspace = true
veryagent-team-prompts.workspace = true
veryagent-auth.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
dashmap.workspace = true
regex.workspace = true
agent-client-protocol = "0.11.1"
futures-util.workspace = true

[dev-dependencies]
sqlx.workspace = true
tokio = { workspace = true, features = ["test-util"] }
futures-util.workspace = true
reqwest.workspace = true
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
veryagent-ai-agent = { workspace = true, features = ["test-support"] }
